StyleSheet.css
/*
 *	StyleSheet.css
 *  Author: Henry Caron, Sejal Dua, Ansgar Jordan, Abigail Radey
 *  Purpose: Stylesheet for Comp20 Midterm Project
 *	Date: 3/10/2020
 */

 * {
 	font-family: Helvetica;
 }

 nav {
 	position: fixed;
 	text-align: center;
 	top: 0;
 	left: 0;
 	width: 100vw;
 	height: 9vh;
 	background-color: #065A82;
 }

 ul {
 	margin: 0;
 	padding: 0;
 	/*display: flex;*/
 	/*text-align: center;*/
 }

 li {
 	list-style-type: none;
 	margin: 0;
 	padding-left: 2vw;
 	padding-right: 2vw;
 	padding-bottom: 2vh;
 	font-size: 6vh;
 	/*display: flex;*/
 }

 .nav-container {
 	display:flex;
 	justify-content: space-between;
 	/*flex-direction: row;*/
 }

 .floatleft {
 	/*float: left;*/
 }

 .floatright {
 	/*float: right;*/
 	display:flex;
 	flex-direction: row;

 }

 .cart {
 	height: 6vh;
 }

 li:hover {
 	background-color: #1C7293;
 }

 a {
 	text-decoration: none;
 	font-size: 5vh;
 	padding: 2vh;
 	color: #FFFFFF;
 }

.hero {
	background-image: url("homeimage.jpg");
	background-size: cover;
	padding: none;
	margin: none;
	width: 100vw;
	height: 100vh;
	display: flex;
	align-items: center;
	justify-content: center;
	color: white;
}

.textgroup {
	text-align: center;
	/*justify-content: center;*/
}

h1 {
	font-size: 15vh;
}

h2 {
	font-size: 10vh;
}

footer {
	background-color: #21295C;
	/*margin: none; */
	border: solid;
	border-color: #21295C;
	width: 100vw;

}
/*
 h1 {
 	text-align:center;
 	color: white;
 	background-color: rgba(51, 0, 0, 0.5);
 	border: 5px solid;

 }

 h2 {
 	text-align: center;
 	color: white;
 	background-color: rgba(51, 0, 0, 0.5);
 	border: 2px solid white;
 }

 p {
 	text-align:left;
 	color: black;
 	font-size: x-large;
 	border: 2px solid white;
 	margin-left: 450px;
 	margin-right: 450px;
 }*/

